--- a/frontend/src/components/NavBar/navBar.css
+++ b/frontend/src/components/NavBar/navBar.css
@@ -20,7 +20,7 @@
     box-shadow: 0px -2px 15px rgba(0, 0, 0, 0.2);
     margin-left: 50px;
 }
-img:hover {
+.navBar img:hover {
     transform: scale(1.1); 
   }
 
