--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -1,4 +1,4 @@
-.buttons{
+.home .buttons{
     position: absolute;
     justify-content: center;
     display: flex;
@@ -7,25 +7,26 @@
     gap: 80px;
     margin: 10px;
 }
-.centerBtn{
+.home .buttons .centerBtn{
     text-decoration: none;
     font-weight: bold;
     font-size: 30px;
     padding: 8px 15px;
     transition: color 0.3s ease;
-    border-radius: 100px;
+    border-radius: 30px;
     align-items: center;
     width: 200px;
-    height: 200px;
+    height: 50px;
     border:1px solid #BB8899;
     background-color:#ECACC0;
 }
-img {
-    width: 70px;
+.home .buttons .centerBtn img {
+    width: 30px;
     align-items: center;
+    justify-content: center;
 }
 
-h3{
+.home h3{
     position: absolute;
     justify-content: center;
     display: flex;
@@ -40,7 +41,7 @@ h3{
     font-weight: 700;
 }
 
-h1 {
+.home h1 {
     position: absolute;
     justify-content: center;
     display: flex;
