--- a/frontend/src/components/Cards/card.module.css
+++ b/frontend/src/components/Cards/card.module.css
@@ -11,7 +11,7 @@
     transform: translate(-50%, -50%);
 }
 
-.card-component{
+.cardComponent{
     border: 1px solid hsla(0, 0%, 100%, 0.8);
     align-items: center;
     text-align: center;
@@ -25,12 +25,12 @@
     aspect-ratio: 1 / 1;
 }
 
-.card-component .card {
+.cardComponent .card {
     align-items: center;
     text-align: center; 
 }
 
-.card-component .card .card-image{
+.cardComponent .card .cardImage{
 width: 100px;
 max-width: 100%;
 max-height: 120px;
@@ -39,11 +39,11 @@ height: 60%;
 object-fit: cover; 
 }
 
-.card-component .card img:hover {
+.cardComponent .card img:hover {
     transform: scale(1.1); 
 }
 
-.card-component .card .card-title{
+.cardComponent .card .cardTitle{
     font-family: "Atma", serif;
     color: #BB8899;
     margin-top: 20px;
